--- a/index.html
+++ b/index.html
@@ -21,12 +21,43 @@
             color: var(--text); font-family: 'Inter', sans-serif; transition: all 0.5s ease; 
         }
         .glass-card { background: var(--panel); backdrop-filter: blur(12px); border: 1px solid rgba(255,255,255,0.1); border-radius: 2rem; }
-        .lcd-display { background: linear-gradient(135deg, rgba(16, 185, 129, 0.05) 0%, rgba(0,0,0,0) 100%); }
+        .lcd-display {
+            background-image:
+                repeating-linear-gradient(90deg, rgba(16, 185, 129, 0.08) 0, rgba(16, 185, 129, 0.08) 1px, rgba(0, 0, 0, 0) 1px, rgba(0, 0, 0, 0) 4px),
+                linear-gradient(135deg, rgba(16, 185, 129, 0.05) 0%, rgba(0,0,0,0) 100%);
+            background-blend-mode: screen;
+        }
         .preset-btn { background: var(--glass); border: 1px solid rgba(255,255,255,0.05); transition: all 0.3s ease; border-radius: 1.25rem; }
         .preset-active { background: var(--accent) !important; color: white !important; box-shadow: 0 0 15px var(--accent); border-color: transparent; }
         .lib-p-active { background: var(--accent) !important; color: white !important; box-shadow: 0 0 15px var(--accent); border-color: transparent; }
         .preset-label { font-size: 0.65rem; font-weight: 600; text-transform: uppercase; opacity: 0.7; }
-        .time-display { font-family: 'Nixie One', 'DSEG7 Classic', 'Inter', sans-serif; letter-spacing: 0.12em; }
+        .time-display {
+            font-family: 'DSEG7 Classic', 'Inter', sans-serif;
+            letter-spacing: 0.15em;
+            position: relative;
+            display: inline-block;
+            line-height: 1;
+            text-shadow: 0 0 2px var(--accent), 0 0 8px var(--accent), 0 0 18px var(--accent);
+            animation: flicker 3.5s infinite;
+        }
+        .time-display::before {
+            content: '88:88';
+            position: absolute;
+            inset: 0;
+            color: rgba(255, 255, 255, 0.05);
+            pointer-events: none;
+            z-index: -1;
+        }
+
+        @keyframes flicker {
+            0%, 100% { opacity: 1; }
+            28% { opacity: 0.96; }
+            32% { opacity: 0.88; }
+            35% { opacity: 0.98; }
+            62% { opacity: 0.92; }
+            65% { opacity: 0.85; }
+            68% { opacity: 0.97; }
+        }
         
         input[type=range].seek-bar { 
             width: 100%; height: 12px; border-radius: 0; background: rgba(255,255,255,0.1); 
@@ -64,13 +95,13 @@
                 <div class="flex items-center justify-between mb-2">
                     <div class="text-[10px] font-bold tracking-widest text-emerald-500 uppercase" id="mode-indicator">Connected</div>
                 </div>
-                <h2 class="time-display text-4xl sm:text-6xl font-bold mb-2 tracking-tight truncate" id="display-title">00:00</h2>
+                <h2 class="time-display text-4xl sm:text-6xl font-bold mb-2 truncate" id="display-title">00:00</h2>
             </div>
             
             <div class="w-full">
                 <div class="flex justify-between px-4 sm:px-8 text-[11px] mb-2 font-semibold opacity-60">
-                    <span id="current-time">00:00</span>
-                    <span id="duration">00:00</span>
+                    <span id="current-time" class="time-display">00:00</span>
+                    <span id="duration" class="time-display">00:00</span>
                 </div>
                 <input type="range" id="seek-bar" class="seek-bar hidden sm:block" value="0" step="1">
             </div>
