--- a/index.html
+++ b/index.html
@@ -33,33 +33,24 @@
         .preset-label { font-size: 0.65rem; font-weight: 600; text-transform: uppercase; opacity: 0.7; }
         .time-display {
             font-family: 'DSEG7 Classic', 'Inter', sans-serif;
-            letter-spacing: 0.15em;
+            letter-spacing: 0.08em;
             position: relative;
             display: inline-block;
             line-height: 1;
             color: var(--time-color);
-            animation: flicker 3.5s infinite;
+            font-variant-numeric: tabular-nums;
+            text-shadow: 0 0 4px rgba(245, 158, 11, 0.35);
         }
         .time-display-glow {
-            text-shadow: 0 0 2px var(--time-color), 0 0 8px var(--time-color), 0 0 18px var(--time-color);
+            text-shadow: 0 0 3px rgba(245, 158, 11, 0.5), 0 0 10px rgba(245, 158, 11, 0.35);
         }
         .time-display::before {
             content: '88:88';
             position: absolute;
             inset: 0;
-            color: rgba(255, 255, 255, 0.05);
+            color: rgba(255, 255, 255, 0.14);
             pointer-events: none;
             z-index: -1;
-        }
-
-        @keyframes flicker {
-            0%, 100% { opacity: 1; }
-            28% { opacity: 0.96; }
-            32% { opacity: 0.88; }
-            35% { opacity: 0.98; }
-            62% { opacity: 0.92; }
-            65% { opacity: 0.85; }
-            68% { opacity: 0.97; }
         }
         
         input[type=range].seek-bar { 
