--- a/index.html
+++ b/index.html
@@ -82,12 +82,14 @@
                 <div class="flex items-center justify-between mb-2">
                     <div class="text-[10px] font-bold tracking-widest text-emerald-500 uppercase" id="mode-indicator">Connected</div>
                 </div>
-                <h2 class="time-display time-display-glow text-4xl sm:text-6xl font-bold mb-2 truncate" id="display-title">00:00</h2>
+                <div class="flex flex-wrap items-baseline gap-6">
+                    <h2 class="time-display time-display-glow text-4xl sm:text-6xl font-bold mb-2 truncate" id="display-title">00:00</h2>
+                    <div id="sleep-timer-display" class="time-display time-display-glow text-4xl sm:text-6xl font-bold uppercase tracking-widest mb-2">Sleep: Off</div>
+                </div>
             </div>
             
             <div class="w-full">
-                <div class="flex justify-between px-4 sm:px-8 text-[11px] mb-2 font-semibold opacity-60">
-                    <span id="current-time" class="time-display">00:00</span>
+                <div class="flex justify-end px-4 sm:px-8 text-[11px] mb-2 font-semibold opacity-60">
                     <span id="duration" class="time-display">00:00</span>
                 </div>
                 <input type="range" id="seek-bar" class="seek-bar hidden sm:block" value="0" step="1">
@@ -109,8 +111,6 @@
                 <button onclick="setSleepTimer(15)" class="glass-card bg-white/5 py-3 text-xs font-semibold tracking-wide uppercase active:scale-95 transition-transform">Sleep in 15 mins</button>
                 <button onclick="setSleepTimer(30)" class="glass-card bg-white/5 py-3 text-xs font-semibold tracking-wide uppercase active:scale-95 transition-transform">Sleep in 30 mins</button>
             </div>
-            <div id="sleep-timer-display" class="text-[11px] font-semibold uppercase tracking-[0.2em] opacity-60 text-center">Sleep timer: Off</div>
-
             <div class="grid grid-cols-3 sm:grid-cols-6 gap-3">
                 <button onpointerdown="handlePresetStart(1)" onpointerup="handlePresetEnd(1)" onpointercancel="handlePresetCancel()" onpointerleave="handlePresetCancel()" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-1"><span class="text-xl font-bold">1</span><span class="preset-label truncate w-full px-2" id="label-1"></span></button>
                 <button onpointerdown="handlePresetStart(2)" onpointerup="handlePresetEnd(2)" onpointercancel="handlePresetCancel()" onpointerleave="handlePresetCancel()" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-2"><span class="text-xl font-bold">2</span><span class="preset-label truncate w-full px-2" id="label-2"></span></button>
@@ -429,7 +429,6 @@
 
     function updateCurrentTimeDisplay(value) {
         const timeText = formatTime(value);
-        document.getElementById('current-time').textContent = timeText;
         if (timeDisplay) timeDisplay.textContent = timeText;
     }
 
@@ -446,7 +445,7 @@
         const seconds = remainingSeconds % 60;
         const remainingLabel = `${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
         modeIndicator.textContent = `SLEEP: ${remainingLabel}`;
-        sleepDisplay.textContent = `Sleep timer: ${remainingLabel}`;
+        sleepDisplay.textContent = `Sleep: ${remainingLabel}`;
         if (remainingMs === 0) endSleepTimer();
     }
 
@@ -458,7 +457,7 @@
         sleepEndTime = null;
         audio.pause();
         modeIndicator.textContent = 'SLEEP TIMER ENDED';
-        sleepDisplay.textContent = 'Sleep timer: Ended';
+        sleepDisplay.textContent = 'Sleep: Ended';
         setTimeout(() => {
             if (!sleepEndTime) {
                 modeIndicator.textContent = defaultModeText;
